[build-system]
requires = ["setuptools>=61.2.0", "wheel", "toml", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "antlrCompile"
authors = [{name = "KOLANICH"}]
description = "Python bindings for ANTLR parser generator"
readme = "ReadMe.md"
keywords = ["ANTLR", "grammar", "parser", "java", "JVM"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.4"
dependencies = [
	"JAbs" # @ git+https://codeberg.org/KOLANICH-libs/JAbs.py
]
dynamic = ["version"]

[project.urls]
Homepage = "https://codeberg.org/UniGrammar/antlrCompile.py"

[tool.setuptools]
zip-safe = true
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
